--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <img src="img/logo_white.png" alt="logo" />
             </a>
           </li>
-          <li><a href="#client">CLIENT</a></li>
+          <li><a href="#client">CLIENTS</a></li>
           <li><a href="#social_media">SOCIAL MEDIA</a></li>
         </ul>
       </nav>
@@ -45,19 +45,18 @@
       <div class="section__container about__container" id="about">
         <h2 class="section__header">WE CAPTURE THE MOMENTS</h2>
         <p class="section__description">
-          At ForFrameBooth, we specialize in freezing those fleeting moments in time
-          that hold immense significance for you. With our passion for photography
-          and keen eye for detail, we transform ordinary moments into
-          extraordinary memories.
+          FOR FRAME is able to cover any kind of social event or gathering with professionalism, 
+          positive energy, state-of-the-art photographic equipment and creativity. We are always 
+          ready to adapt to the needs and preferences of our customers, offering a unique 
+          experience and unforgettable moments at every event. We can cover weddings, christenings, 
+          corporate events, conferences, festivals and many other events.
         </p>
         <p class="section__description">
-          Whether it's a milestone event, a candid portrait, or the breathtaking
-          beauty of nature, we strive to encapsulate the essence of every moment,
-          ensuring that your cherished memories last a lifetime. Trust us to
-          capture the magic of your life's journey, one frame at a time.
+          Contact us for more information and offers. We look forward to serving you and creating 
+          unforgettable memories together.
         </p>
         <div class="contact_number">
-          <a class="call_btn" href="tel:+357 96664658">Call Us</a>
+          <a class="call_btn" href="tel:+357 99781407">Call Us</a>
           </div>
       </div>
     </header>
@@ -219,14 +218,19 @@
     <section class="section__container instagram__container">
       <h2 class="section__header_dark">~ INSTAGRAM ~</h2>
       <div class="instagram__flex">
-        <img src="assets/image-1.jpg" alt="instagram" />
-        <img src="assets/image-2.jpg" alt="instagram" />
-        <img src="assets/image-3.jpg" alt="instagram" />
-        <img src="assets/image-4.jpg" alt="instagram" />
-        <img src="assets/image-5.jpg" alt="instagram" />
-        <img src="assets/image-6.jpg" alt="instagram" />
-        <img src="assets/image-7.jpg" alt="instagram" />
-        <img src="assets/image-8.jpg" alt="instagram" />
+        <img src="assets/1.jpg" alt="instagram" />
+        <img src="assets/2.jpg" alt="instagram" />
+        <img src="assets/3.jpg" alt="instagram" />
+        <img src="assets/4.jpg" alt="instagram" />
+        <img src="assets/5.jpg" alt="instagram" />
+        <img src="assets/6.jpg" alt="instagram" />
+        <img src="assets/7.jpg" alt="instagram" />
+        <img src="assets/8.jpg" alt="instagram" />
+        <img src="assets/9.jpg" alt="instagram" />
+        <img src="assets/10.jpg" alt="instagram" />
+        <img src="assets/11.jpg" alt="instagram" />
+        <img src="assets/12.jpg" alt="instagram" />
+        <img src="assets/13.jpg" alt="instagram" />
       </div>
     </section>
 
@@ -235,15 +239,14 @@
         <div class="footer__col">
           <img src="img/logo_black.png" alt="logo" />
           <div class="footer__socials">
-            <a href="https://www.instagram.com/forframebooth/">PHOTOBOOTH<i class="ri-instagram-line"></i></a>
-            <a href="https://www.instagram.com/for.frame.sports/">SPORTS<i class="ri-instagram-line"></i></a>
+            <a href="https://www.instagram.com/for_frame_cy/">FOR_FRAME_CY <i class="ri-instagram-line"></i></a>
 
           </div>
         </div>
       </div>
 
       <div class="footer__bar">
-        Copyright © 2024 Web Design Mastery. All rights reserved.
+        Copyright © angelaDrous. All rights reserved.
       </div>
 
     </footer>
